...
    await _future;
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Словарь')),
      body: RefreshIndicator(
        onRefresh: _reload,
        child: FutureBuilder<List<GuyoDictionary>>(
          future: _future,
          builder: (context, snapshot) {
            if (snapshot.connectionState == ConnectionState.waiting) {
...
